# temponest

./: .commitlintrc.js  .dockerignore  .env.example  .eslintrc.js  .gitignore  .lintstagedrc.js  .pre-commit-config.yaml  .prettierignore  AGENTIC-COMPANY-SETUP-COMPLETE.md  CHANGELOG.md  CLAUDE-CODE-SETUP.md  CLAUDE.md  CLAUDE_SETUP.md  CONTRIBUTING.md  COOLIFY_DEPLOYMET.md  CRITICAL_FLOWS_TESTING.md  DEPARTMENTS_GUIDE.md  DOCKER_SERVICES.md  Dockerfile  HOW-TO-USE.md  LEVERAGE-TEMPONEST-FOR-SAAS-PORTFOLIO.md  LICENSE  OPTIMIZATION_PROGRESS.md  OPTIMIZATION_ROADMAP.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_VALIDATION.md  POST_DEPLOYMENT_MONITORING.md  PRODUCTION_ROLLOUT_PLAN.md  QUICKSTART.md  README.md  REPOSITORY_AUDIT.md  SAAS-COMPANY-COMPLETE.md  SAAS-CONSOLE-ROADMAP.md  SECURITY.md  SESSION_COMPLETE.md  STAGING_DEPLOYMENT_CHECKLIST.md  START.sh  TESTING_ARCHITECTURE_COMPLETE.md  TESTING_GAPS_REPORT.md  TEST_IMPROVEMENTS_SUMMARY.md  (+21 more)
.planning/: MILESTONES.md  PROJECT.md  (+3 more)
sdk/: README.md  coverage.json  coverage.json.bak  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py
sdk/examples/: 01_basic_agent_usage.py  02_scheduling_agents.py  03_async_usage.py  04_error_handling.py
sdk/temponest_sdk/: __init__.py  agents.py  client.py  collaboration.py  costs.py  exceptions.py  main.py  models.py  rag.py  scheduler.py  webhooks.py
sdk/tests/: __init__.py  conftest.py
sdk/tests/unit/: test_agents_client.py  test_client.py  test_collaboration_client.py  test_costs_client.py  test_main_client.py  test_rag_client.py  test_scheduler_client.py  test_webhooks_client.py
(+520 files in other folders)
